[package]
name = "mcm_api_wrapper"
version = "1.0.0"
authors = ["Harry [hello@majored.pw]"]
edition = "2021"
repository = "https://github.com/Majored/rs-mcm-api-wrapper"
description = "A wrapper for MC-Market's Ultimate REST API."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/mcm_api_wrapper/"
homepage = "https://github.com/Majored/rs-mcm-api-wrapper"
keywords = ["async", "tokio", "api-wrapper", "mc-market"]
categories = ["asynchronous", "api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.1", features = ["full"] }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

log = "0.4.14"
derive-getters = "0.2.0"