[package]
name = "bbb_api_wrapper"
version = "1.0.2"
authors = ["Harry [hello@majored.pw]"]
edition = "2021"
repository = "https://github.com/Majored/rs-bbb-api-wrapper"
description = "A wrapper for BuiltByBit's Ultimate REST API."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/bbb_api_wrapper/"
homepage = "https://github.com/Majored/rs-bbb-api-wrapper"
keywords = ["async", "tokio", "api-wrapper", "BuiltByBit"]
categories = ["asynchronous", "api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = "1.20.0"

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.10.1"

log = "0.4.17"
derive-getters = "0.2.0"